@@ -3,7 +3,8 @@
 - fixed spacing problems in the output messages for MakeRmd()
 - added constraint that some version of Python must be installed for WriteR() to work.
 - added scope for WriteR() to call a file name for a file that does not yet exist. The file is created and then the application opens.
-- added library(BrailleR) to first chunk created by UniDesc() and ifelse(VI, "library(BrailleR)", "library(knitr)") to the first chunk of the other convenience functions so the Rmd files can be converted without BrailleR being loaded. Discovered at University of Pretria Boot Camp.
+- added library(BrailleR) to first chunk created by UniDesc() and ifelse(VI, "library(BrailleR)", "library(knitr)") to the first chunk of the other convenience functions so the Rmd files can be converted without BrailleR being loaded. Discovered at University of Pretoria Boot Camp.
+- Fixed MakeSlideshow() so that warnings for empty blank lines at the end of slides no longer appears.
 
 
 # v0.23.8
